--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack serve",
     "server": "json-server db.json --port 3333",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack json-server db.json --port 3333",
     "test": "jest --watchAll"
   },
   "dependencies": {
