updating package.json script server

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack serve",
-    "server": "json-server db.json --port 3333",
-    "build": "cross-env NODE_ENV=production webpack json-server db.json --port 3333",
+    "server": "json-server server.json --port 3333",
+    "build": "cross-env NODE_ENV=production webpack",
     "test": "jest --watchAll"
   },
   "dependencies": {
